tweak to fix column align on first page v11

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -27,6 +27,7 @@ strong {
   font-weight:700;
 }
 
+details summary::-webkit-details-marker { display:none; }
 
 
 /* Back from Register to Vote */
